@@ -70,6 +70,11 @@
           <version>3.0.0</version>
         </plugin>
       </plugins>
-    </pluginManagement>
+    </pluginManagement><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+      <source>23</source>
+      <target>23</target>
+      <compilerArgs>--enable-preview</compilerArgs>
+    </configuration></plugin></plugins>
   </build>
 </project>
